高亮度顯示推文所有作者id

--- a/content.css
+++ b/content.css
@@ -3,6 +3,11 @@
     cursor: pointer;
 }
 
+/* 高亮度顯示文章作者的id */
+.highlight-poster-userid {
+    background-color: darkgreen;
+}
+
 /* 高亮度顯示的推文id */
 .highlight-selected-userid {
     background-color: blue;
