--- a/article.css
+++ b/article.css
@@ -16,11 +16,28 @@
 /* 推文樓層 */
 .push .floor {
     position: absolute;
-    right: 100%;
-    min-width: 4em;
-    padding-right: 1em;
+    left: -4.5em;
+    width: 4em;
     text-align: right;
     color: gray;
+}
+/* 左邊空間不夠時，改成顯示在推文時間左邊 */
+@media screen and (max-width: 1400px) {
+    .push .floor {
+        left: calc(100% - 10em);
+    }
+}
+/* 推文時間左邊空間也不夠時，改成滑鼠指到推文時滑出 */
+@media screen and (max-width: 1000px) {
+    .push .floor {
+        left: 100%;
+        color: black;
+        background-color: lightgray;
+        transition: left 0.2s;
+    }
+    .push:hover .floor {
+        left: calc(100% - 4em);
+    }
 }
 
 .push-statistics {
