--- a/article.css
+++ b/article.css
@@ -60,18 +60,17 @@
     color: #bbb;
 }
 
-/* 指到圖片時，放大置中顯示 */
-.richcontent img:hover {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+/* 指到圖片時放大顯示 */
+.richcontent-img {
+    transition: max-width 0.3s, max-height 0.3s;
+}
+.richcontent-img:hover {
     z-index: 100;
     max-width: calc(100vw - 50px);
-    max-height: calc(100vh - 50px);
-    box-shadow: 0 0 50px gray;
+    max-height: calc(100vh - 200px);
     cursor: pointer;
-}
+    transition: max-width 0.3s, max-height 0.3s;
+} 
 
 /* 通知視窗 */
 .pwe-notify {
