--- a/src/article.css
+++ b/src/article.css
@@ -1,10 +1,10 @@
 /* 隱藏元素 */
-.hidden {
+.pwe-hidden {
     display: none !important;
 }
 
 /* 可點選的元素 */
-.clickable {
+.pwe-clickable {
     cursor: pointer;
 }
 
@@ -14,17 +14,17 @@
 }
 
 /* 高亮度顯示文章作者的id */
-.highlight-poster-userid {
+.pwe-highlight-poster-userid {
     background-color: darkSlateBlue;
 }
 
 /* 高亮度顯示點選的推文id */
-.highlight-selected-userid {
+.pwe-highlight-selected-userid {
     background-color: blue;
 }
 
 /* 推文樓層 */
-.push .floor {
+.push .pwe-floor {
     position: absolute;
     left: -4.5em;
     width: 4em;
@@ -33,25 +33,25 @@
 }
 /* 左邊空間不夠時，改成指到推文時浮現 */
 @media screen and (max-width: 1400px) {
-    .push .floor {
+    .push .pwe-floor {
         left: calc(100% - 4em);
         opacity: 0;
         color: black;
         background-color: lightgray;
         transition: opacity 0.3s;
     }
-    .push:hover .floor {
+    .push:hover .pwe-floor {
         opacity: 1;
     }
 }
 
 /* 5的倍數樓層加底線 */
-.push .floor-multiple-5 {
+.push .pwe-floor-multiple-5 {
     text-decoration: underline;
 }
 
 /* 推文統計 */
-.push-statistics {
+.pwe-push-statistics {
     margin: 10px auto;
     width: 100%;
     min-width: 600px;
@@ -61,22 +61,22 @@
 }
 
 /* 圖片放大顯示 */
-.richcontent-resize {
+.pwe-richcontent-resize {
     max-width: calc(100vw - 50px);
     max-height: calc(100vh - 200px);
 }
-.richcontent-resize img {
+.pwe-richcontent-resize img {
     max-height: calc(100vh - 200px);
 }
 
 /* 頂部和底部導覽列自動隱藏 */
-#topbar-container.autohide,
-#navigation-container.autohide {
+#topbar-container.pwe-autohide,
+#navigation-container.pwe-autohide {
     opacity: 0;
     transition: opacity 0.3s;
 }
-#topbar-container:hover,
-#navigation-container:hover {
+#topbar-container.pwe-autohide:hover,
+#navigation-container.pwe-autohide:hover {
     opacity: 1;
 }
 
