文章列表，作者 ID 的箭頭改為使用 CSS 呈現

--- a/src/shared.css
+++ b/src/shared.css
@@ -7,6 +7,9 @@
     color: #333;
     background-color: #ccc;
 }
+.pwe-menu__trigger--arrow::after {
+    content: '▾';
+}
 .pwe-menu__dropdown {
     position: absolute;
     background-color: #444;
